# click-rich-help

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  LICENSE.txt  README.md  pyproject.toml
.circleci/: config.yml
click_rich_help/: __init__.py  core.py  decorators.py  example.py  utils.py
docs/: usage.md
scripts/: example.sh  make_screenshots.py  option_example.py
tests/: conftest.py  test_basic.py  test_custom_colors.py  test_docstring.py  test_groups.py  test_multi_commands.py  test_theme.py  test_version_option.py
