[tool.poetry]
name = "click-rich-help"
version = "0.3.0"
description = "make a beautiful click app with rich"
authors = ["Daylin Morgan <daylinmorgan@gmail.com>"]
repository = "https://github.com/daylinmorgan/click-rich-help"
readme = "README.md"
license = "MIT"
include = ["LICENSE.txt"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"
rich = ">=10.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
mypy = "^0.910"
bumpver = "^2022.1116"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-s"

[tool.mypy]
color_output = true
error_summary = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.bumpver]
current_version = "v0.3.0"
version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'current_version = "{version}"',
  'version = "{pep440_version}"',
]
"click_rich_help/__init__.py" = ['__version__ = "{pep440_version}"']
